--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <form class="" action="index.html" method="post">
-      <input type="text"><br>
-      <input type="checkbox"><br>
-      <input type="date"><br>
-      <input type="submit"><br>
-      <input type="radio"><br>
-      <input type="range"><br>
-    </form>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Curtis's Personal Site</title>
+</head>
+
+<body>
+  <img src="images/test.jpg" alt="test jpg">
+  <h1>Curtis Duck</h1>
+  <p><em>Systems Administrator</em></p>
+  <p>Testing paragraph for bio.</p>
+  <hr />
+  <h3>Education</h3>
+  <ul>
+    <li>Cisco CCNA</li>
+    <li>CEH 9</li>
+    <li>NMAP for Ethical Hacking</li>
+    <ul>
+      <li>Test Nesting</li>
+    </ul>
+    <li>Wireshark Like a Pro</li>
+  </ul>
+  <h3>My Hobbies</h3>
+  <ol>
+    <li>Reptiles</li>
+    <li>Computers</li>
+    <li>Netwotking</li>
+    <ol type="i">
+      <li>Testing Nesting</li>
+      <li>Testing Nestin 2</li>
+    </ol>
+    <li>Gaming</li>
+  </ol>
+</body>
+
 </html>
